--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,4 +24,12 @@
         android:textAllCaps="true"
         android:layout_marginBottom="16dp"/>
 
+    <Button
+        android:id="@+id/btn_move_activity_object"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/move_with_object"
+        android:textAllCaps="true"
+        android:layout_marginBottom="16dp"/>
+
 </LinearLayout>
