--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,4 +32,12 @@
         android:textAllCaps="true"
         android:layout_marginBottom="16dp"/>
 
+    <Button
+        android:id="@+id/btn_dial_number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/dial_number"
+        android:textAllCaps="true"
+        android:layout_marginBottom="16dp"/>
+
 </LinearLayout>
