Latihan Mendapatkan Nilai Balik dari Intent

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,4 +40,20 @@
         android:textAllCaps="true"
         android:layout_marginBottom="16dp"/>
 
+    <Button
+        android:id="@+id/btn_move_for_result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/move_with_result"
+        android:textAllCaps="true"
+        android:layout_marginBottom="16dp"/>
+
+    <TextView
+        android:id="@+id/tv_result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/result_from_activity"
+        android:gravity="center"
+        android:textSize="24sp"/>
+
 </LinearLayout>
